--- a/app/src/main/res/layout/activity_leds.xml
+++ b/app/src/main/res/layout/activity_leds.xml
@@ -36,15 +36,14 @@
         app:layout_constraintStart_toEndOf="@+id/button11"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-        android:id="@+id/viewAdvanced"
+    <View
+        android:id="@+id/view2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button11">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView_G"
@@ -178,6 +177,8 @@
             app:layout_constraintBottom_toTopOf="@+id/seekBar_R"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+    </View>
 
     <!--
     <Button
